[package]
name = "worker-rs-alarm"
version = "0.1.0"
edition = "2024"

[profile.dev]
strip = true

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", default-features = false, features = [
  "wasmbind",
  "serde",
  "clock",
  "js-sys",
] }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.217", default-features = false, features = [
  "derive",
  "serde_derive",
] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
wasm-bindgen = "0.2.100"
worker = { version = "0.5.0", features = ["http", "queue", "d1", "timezone"] }
